# docs/swagger.json
@@ -9,6 +9,38 @@
     "host": "localhost:18888",
     "basePath": "/api/v1",
     "paths": {
+        "/protected/project/creater_id": {
+            "get": {
+                "description": "Get project by createrId",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Project"
+                ],
+                "summary": "Get project by createrId",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Account ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/public/confirm_code": {
             "post": {
                 "description": "Confirm code register",
